fix white space and highlighted text

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,6 +12,7 @@ body {
 
 .text-lg {
   font-size: 18px !important;
+  font-weight: 500;
 }
 
 .nav-top {
